--- a/.github/workflows/turbo.yml
+++ b/.github/workflows/turbo.yml
@@ -37,6 +37,7 @@ jobs:
  
       - name: Build
         run: pnpm build
- 
-      - name: Test
-        run: pnpm test
+
+      # No test command added yet (TBC) 
+      # - name: Test
+      #  run: pnpm test
