--- a/.github/workflows/sonar.yml
+++ b/.github/workflows/sonar.yml
@@ -2,9 +2,10 @@ name: Sonarcloud Analysis
 on:
   push:
     branches:
-      - main
+      - '**'   
   pull_request:
-    types: [opened, synchronize, reopened]
+    branches:
+      - '**'
 jobs:
   sonarcloud:
     name: Build and Analyze
