--- a/apps/livestream/package.json
+++ b/apps/livestream/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@auth0/nextjs-auth0": "^3.5.0",
     "@repo/ui": "workspace:*",
     "next": "14.2.18",
     "react": "18.3.1",
